Edited link of font-family

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
   <title>About Lien-Chu</title>
 </head>
@@ -31,7 +32,7 @@
               <img id="icon" src="img/link.svg" width="85">
             </a></th>
           <th><a href="//github.com/Lien-Chu" target="_blank">
-              <img id="icon" src="img/github.svg" width="35">
+              <img id="icon" src="img/github.svg" width="30">
             </a></th>
         </tr>
       </table>
