--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
       <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
       <link rel="stylesheet" href="contact.css">
       <link rel="shortcut icon" href="img/bird.svg" type="image.png">
       <title>Contact Lien-Chu</title>
