--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
   <title>Lien-Chu's Portfolio</title>
 </head>
