--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
         <p id="Lienchu">
             Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working
             independently.
-            <br>
-            <br>
+            <br><br>
             I am sociable, outgoing, and get along well with my colleagues.
-            <br>
-            <br>
+            <br><br>
             My goal is to become a web developer and web designer.
-            <br>
-            <br>
+            <br><br>
             I will continue to learn new skills about front-end and back-end and various devices to improve my
             professional skills and become a full-Stack developer.
             </p>
@@ -62,7 +59,16 @@
       </div>
       <div class="box">
         <h3>&emsp;EDUCATION</h3>
-
+        <table>
+          <tr>
+            <th>Astar</th>
+            <td>2022 - 2022</td>
+          </tr>
+          <tr>
+            <td>Programmering</td>
+          </tr>
+        </table>
+        <br>
         <table>
           <tr>
             <th>Hermods Swedish language schoo</th>
