--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
-  <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
+  <link rel="shortcut icon" href="/P2-22/img/triangle.svg" type="image.png">
   <title>About Lien-Chu</title>
 </head>
 
@@ -42,15 +42,13 @@
       <div class="box">
         <h3>&emsp;LIEN-CHU HUANG</h3>
         <p id="Lienchu">
-            Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working
-            independently.
-            <br><br>
-            I am sociable, outgoing, and get along well with my colleagues.
-            <br><br>
-            My goal is to become a web developer and web designer.
-            <br><br>
-            I will continue to learn new skills about front-end and back-end and various devices to improve my
-            professional skills and become a full-Stack developer.
+          Hi, I'm Lien-Chu, come from Taiwan.        
+          <br>
+          I am enriching and refining my expertise every day, and I am passionate about web development and web design, my goal is to be a full-stack developer.
+          <br>
+          I'm a responsible person who is easy to work with and has no problems working independently. I am sociable, and outgoing, I'm sure we'll get along very well if we start working together !
+          <br>
+       
             </p>
       </div>
       <div class="box">
@@ -129,7 +127,7 @@
         <h3>&emsp;LANGUAGE</h3>
         <table class="language">
           <tr>
-            <th>Taiwanese Hokkien</th>
+            <th>Taiwanese</th>
             <td>Mother tongue</td>
           </tr>
           <tr>
@@ -154,6 +152,7 @@
       <br><br>
     </div>
   </div>
+  
   <footer>
     <hr>
     <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
