--- a/portfolio.html
+++ b/portfolio.html
@@ -2,52 +2,90 @@
 <html>
 
 <head>
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/portfolio.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
-  <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
+  <link rel="shortcut icon" href="/P2-22/img/triangle.svg" type="image.png">
   <title>Lien-Chu's Portfolio</title>
 </head>
+
 <body>
-<header>
-  <nav>
-    <table class="nav">
-      <th><a href="index.html">About me</a></th>
-      <th><a href="portfolio.html">My Portfolio</a></th>
-      <th><a href="contact.html">Contact me</a></th>
-    </table>
-  </nav>
-</header>
-
-  <div class="container">
-    <a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank">
-      <h1>LienChu's Oprofessionella Filmintroduktion</h1></a>
-    <br>
-    <a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank">
-    <table class="picture-link">
-      <tr>
-        <td><img src="img/1.jpg"></td>
-        <td><img src="img/2.jpg"></td>
-        <td><img src="img/3.jpg"></td>
-      </tr>
-      <tr>
-        <td><img src="img/4.jpg"></td>
-        <td><img src="img/5.jpg"></td>
-        <td><img src="img/6.jpg"></td>
-      </tr>
-      <tr>
-        <td><img src="img/7.jpg"></td>
-        <td><img src="img/8.jpg"></td>
-        <td><img src="img/9.jpg"></td>
-      </tr>
-    </table></a>
+  <header>
+    <nav>
+      <table class="nav">
+        <th><a href="index.html">About me</a></th>
+        <th><a href="portfolio.html">My Portfolio</a></th>
+        <th><a href="contact.html">Contact me</a></th>
+      </table>
+    </nav>
+  </header>
+  <div class="wraper">
+    <h1>Välkomna Till Lien-Chus Hemsida</h1>
+    <ul class="menu">
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-queen"></i>&nbsp; Moment 1
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 1/moment1.html" target="_blank">
+            <li class="menu-item-list">Lien Chu's Filmintroduktion</li>
+          </a>
+        </ul>
+      </li>
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-king"></i>&nbsp; Moment 2
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 2/moment2.html" target="_blank">
+            <li class="menu-item-list">Internet historia och utveckling</li>
+          </a>
+        </ul>
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-knight"></i>&nbsp; Moment 3
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 3/moment3.html" target="_blank">
+            <li class="menu-item-list">Boxar med CSS</li>
+          </a>
+        </ul>
+      </li>
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-rook"></i></i>&nbsp; Moment 4
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 4/Background gradients/index.html" target="_blank">
+            <li class="menu-item-list">Background gradients</li>
+          </a>
+          <a href="/P2-22/Moment 4/Svenska fåglarna/index.html" target="_blank">
+            <li class="menu-item-list">Svenska fåglarna</li>
+          </a>
+        </ul>
+      </li>
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-pawn"></i>&nbsp; Moment 5
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 5/bootstrap.html" target="_blank">
+            <li class="menu-item-list">Bootstrap</li>
+          </a>
+          <a href="/P2-22/Moment 5/moment5.html" target="_blank">
+            <li class="menu-item-list">Meny</li>
+          </a>
+        </ul>
+      </li>
+      <li class="menu-list">
+        <i class="fa-regular fa-chess-bishop"></i>&nbsp; Moment 6
+        <ul class="menu-item">
+          <a href="/P2-22/Moment 6/moment6.html" target="_blank">
+            <li class="menu-item-list">Form</li>
+          </a>
+        </ul>
+      </li>
+    </ul>
   </div>
-
-<hr>
   <footer>
+    <hr>
     <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
   </footer>
 </body>
+
 </html>
