--- a/Moment/moment6.html
+++ b/Moment/moment6.html
@@ -45,7 +45,7 @@
             var password = document.getElementById("password").value;
             if (username == "Vicky" && password == "12345") {
                 alert("Login lyckades!!\nVälkommen");
-                window.location.href = "/Moment 5/moment5.html";
+                window.location.href = "/Moment/moment5.html";
                 return false;
             }
             else {
