Edited education of Astar

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <td>2022 - 2022</td>
           </tr>
           <tr>
-            <td>Programmering</td>
+            <td>Programming</td>
           </tr>
         </table>
         <br>
