--- a/Moment/Svenska fåglarna.html
+++ b/Moment/Svenska fåglarna.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="/Images/triangle.svg" type="image.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/P2-22/img/triangle.svg" type="image.png">
     <link rel="stylesheet" href="/Moment4_CSS/Svenska fåglarna/style4.css">
