Edited information of education

--- a/index.html
+++ b/index.html
@@ -42,18 +42,21 @@
       <div class="box">
         <h3>&emsp;LIEN-CHU HUANG</h3>
         <p id="Lienchu">
-          Hi, I'm Lien-Chu, come from Taiwan.        
+          My name is Lien-Chu from Taiwan.
+          I am a responsible person who is easy to work
+          with and works well independently. I am also
+          sociable and get along well with people.
           <br>
-          I am enriching and refining my expertise every day, and I am passionate about web development and web design, my goal is to be a full-stack developer.
-          <br>
-          I'm a responsible person who is easy to work with and has no problems working independently. I am sociable, and outgoing, I'm sure we'll get along very well if we start working together !
-          <br>
-       
-            </p>
+          I’m a fast learner, have a good logical
+          understanding and strong curiosity, being
+          pragmatic, and am not afraid of challenging
+          problems.
+        </p>
       </div>
       <div class="box">
         <h3>&emsp;COMPUTER KNOWLEDGE</h3>
-        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP</b></p>
+        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP,&emsp;JQuery,&emsp;Git
+            (Hub),&emsp;Visual Studio,&emsp;VSCode,&emsp;Netlify,&emsp;,WordPress,&emsp;MySQL</b></p>
       </div>
       <div class="box">
         <h3>&emsp;EDUCATION</h3>
@@ -150,9 +153,34 @@
         <br>
       </div>
       <br><br>
+      <div class="box">
+        <h3>&emsp;INFORMATION ABOUT PROGRAMMING EDUCATION .</h3>
+        <p id="astar">
+          <b>Astar</b>
+          <br> <br>
+          After 8-month educational training at Astar, I learned about the history of
+          computers and the Internet and how they work. I also learned how to build a
+          general-purpose desktop computer and a gaming desktop.
+          The programming course mainly uses Visual Studio to write C# code. I
+          learned how to use the Windows Forms app and console app and create a
+          database. <br> <br>
+          In the web development course, we use VS Code to build web applications in
+          HTML, CSS, and Javascript jQuery. I made some web pages, like a menu page,
+          contact page, and login page, and used Netlify to publish them on the
+          Internet. I have a strong interest in web page production, and I have a good
+          sense of colors and aesthetic feeling, which I think helps in web design and
+          web development. <br> <br>
+          In the Web server programming server language, I learned how to use VS
+          Code to write PHP codes with security and connect to MySQL.
+          In addition to what I've learned in the course, I'm also teaching myself more,
+          using online tutorials and educational apps. I've learned React.js and git and
+          pushed my code to GitHub repositories. I hope in the future to become a
+          full-stack developer.</p>
+          <br> <br>
+      </div>
     </div>
   </div>
-  
+
   <footer>
     <hr>
     <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
